Cards Dashboard - Consumes API

--- a/apps/dashboard/templates/components/base.html
+++ b/apps/dashboard/templates/components/base.html
@@ -48,7 +48,7 @@
     <!-- <li><a class="subheader">Dashboard</a></li> -->
     <!-- <li><div class="divider"></div></li> -->
     <li><a class="waves-effect" href="#">Página Inicial</a></li>
-    <li><a class="subheader">Esteiras</a></li>
+    <li><a class="subheader">Produção</a></li>
     <li><div class="divider"></div></li>
     {% for device in devices %}
     <li><a class="waves-effect" href="#">{{device.name}}</a></li>
